feat: checkProductAvailabilityByQuantity, subtractProductQuantityById, addProductQuantityById endpoints
